zhaoge/force-app/main/default/objects/AutoNumberMaster__c/AutoNumberMaster__c.object-meta.xml
<CustomObject>
    <label>採番マスタ</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>AutoNumberMaster名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>