zhaoge/force-app/main/default/objects/AutoNumberMaster__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <externalId>true</externalId>
    <label>自動採番コード</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>